Implement user status toggle functionality and enhance user retrieval with pagination

--- a/BloggoFrontend/pages/user-management.html
+++ b/BloggoFrontend/pages/user-management.html
@@ -67,139 +67,14 @@
           </thead>
           <tbody id="userTableBody"></tbody>
         </table>
-        <nav>
+        <nav class="d-flex justify-content-center">
           <ul class="pagination" id="pagination"></ul>
         </nav>
+
       </div>
     </main>
   </div>
 </div>
-
-<tbody id="userTableBody"></tbody>
-<nav>
-  <ul class="pagination" id="pagination"></ul>
-</nav>
-
-<script>
-  const API_USERS = "http://localhost:8080/user/getAll-pagination";
-  let currentPage = 1;
-  const pageSize = 5;
-
-  // Get JWT token
-  function getToken() {
-    const token = sessionStorage.getItem("jwtToken");
-    if (!token) {
-      alert("You are not logged in! Redirecting to login...");
-      window.location.href = "signing.html";
-    }
-    return token;
-  }
-
-  // Load users
-  function loadUsers(page = 1) {
-    const token = getToken();
-    currentPage = page;
-
-    fetch(`${API_USERS}?page=${page-1}&size=${pageSize}`, {
-      headers: {
-        "Authorization": `Bearer ${token}`,
-        "Content-Type": "application/json"
-      }
-    })
-            .then(res => {
-              if (!res.ok) throw new Error(`Failed to fetch users (${res.status})`);
-              return res.json();
-            })
-            .then(data => {
-              const tbody = document.getElementById("userTableBody");
-              tbody.innerHTML = "";
-
-              if (!data.content || data.content.length === 0) {
-                tbody.innerHTML = `<tr><td colspan="5" class="text-center text-muted">No users found</td></tr>`;
-                renderPagination(0, page);
-                return;
-              }
-
-              data.content.forEach(user => {
-                tbody.innerHTML += `
-                <tr>
-                    <td>${user.userId || user.id}</td>
-                    <td>${user.username}</td>
-                    <td>${user.email}</td>
-                    <td>${user.role?.name || user.role}</td>
-                    <td>
-                        <span class="badge ${user.status === 'ACTIVE' ? 'bg-success' : 'bg-secondary'}"
-                              onclick="toggleStatus(${user.userId || user.id}, this)">
-                            ${user.status || 'ACTIVE'}
-                        </span>
-                    </td>
-                </tr>`;
-              });
-
-              renderPagination(data.totalPages, page);
-            })
-            .catch(err => {
-              console.error(err);
-              alert("Error loading users. Check console for details.");
-            });
-  }
-
-  // Render pagination
-  function renderPagination(totalPages, current) {
-    const pagination = document.getElementById("pagination");
-    pagination.innerHTML = "";
-
-    if (totalPages === 0) return;
-
-    const createPageItem = (label, page, disabled = false, active = false) => {
-      const li = document.createElement("li");
-      li.className = `page-item ${disabled ? "disabled" : ""} ${active ? "active" : ""}`;
-      li.innerHTML = `<a class="page-link" href="#">${label}</a>`;
-      li.addEventListener("click", e => {
-        e.preventDefault();
-        if (!disabled) loadUsers(page);
-      });
-      return li;
-    };
-
-    // Previous
-    pagination.appendChild(createPageItem("Previous", current - 1, current === 1));
-
-    // Page numbers
-    for (let i = 1; i <= totalPages; i++) {
-      pagination.appendChild(createPageItem(i, i, false, i === current));
-    }
-
-    // Next
-    pagination.appendChild(createPageItem("Next", current + 1, current === totalPages));
-  }
-
-  // Toggle user status
-  function toggleStatus(userId, badge) {
-    const token = getToken();
-    fetch(`http://localhost:8080/api/v1/admin-actions/status/${userId}`, {
-      method: "PATCH",
-      headers: {
-        "Authorization": `Bearer ${token}`,
-        "Content-Type": "application/json"
-      }
-    })
-            .then(res => {
-              if (!res.ok) throw new Error(`Failed to update status (${res.status})`);
-              return res.json();
-            })
-            .then(data => {
-              const updated = data.data;
-              badge.textContent = updated.status;
-              badge.className = "badge " + (updated.status === "ACTIVE" ? "bg-success" : "bg-secondary");
-            })
-            .catch(err => console.error(err));
-  }
-
-  // Auto-load
-  document.addEventListener("DOMContentLoaded", () => loadUsers(currentPage));
-</script>
-
-
+<script src="../js/user-management.js"></script>
 </body>
 </html>
