Enhance admin dashboard with sidebar navigation and UI improvements

--- a/BloggoFrontend/pages/post-management.html
+++ b/BloggoFrontend/pages/post-management.html
@@ -9,9 +9,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="../css/admin-dashboard.css">
 
     <style>
-        body { background: #f9f9f9; }
+        body {     background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+        }
 
         /* ===== Navbar Styles ===== */
         .glass-navbar {
@@ -81,7 +83,7 @@
         }
 
         .sidebar {
-            height: 100vh;
+
             position: sticky;
             top: 60px;
             background: #f8f9fa;
