--- a/BloggoFrontend/pages/user-management.html
+++ b/BloggoFrontend/pages/user-management.html
@@ -6,8 +6,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="../css/admin-dashboard.css">
   <style>
-    body { background: #f9f9f9; }
+    body {     background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    }
     .glass-navbar { position: sticky; top: 1rem; z-index: 1050; display: flex; justify-content: space-between; padding: 1rem 2rem; margin: 0 auto; width: 60%; border-radius: 20px; margin-top: 1rem; margin-bottom: 2rem; background: rgba(255, 255, 255, 0.15); backdrop-filter: blur(16px) saturate(180%); -webkit-backdrop-filter: blur(16px) saturate(180%); border: 1px solid rgba(255, 255, 255, 0.3); box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); }
     .glass-navbar a { color: #000000; font-weight: 500; margin: 0 1.2rem; text-decoration: none; transition: all 0.3s ease; padding: 0.5rem 1rem; border-radius: 12px; }
     .glass-navbar a:hover { background: rgba(255, 255, 255, 0.2); transform: translateY(-2px); }
@@ -24,19 +26,26 @@
 
 <header class="sticky-top">
   <nav class="glass-navbar align-items-center">
-    <h1 class="navbar-brand">BLOGGO</h1>
+    <h1 class="navbar-brand" href="#" aria-label="Bloggo Home">BLOGGO</h1>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+            aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
     <div class="d-flex align-items-center">
       <div class="text-black me-3">Welcome, Admin</div>
       <div class="dropdown profile-menu">
         <a href="#" class="d-block" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
           <img src="../assets/boy%20(1).png" class="avatar" alt="Profile Avatar">
         </a>
-        <ul class="dropdown-menu dropdown-menu-end">
-          <li><a class="dropdown-item" href="admin-action.html"><i class="fas fa-info me-2"></i> Admin Actions</a></li>
+        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+          <li><a class="dropdown-item" href="user-management.html"><i class="fas fa-info me-2"></i> Admin Actions</a></li>
           <li><a class="dropdown-item" href="user-management.html"><i class="fas fa-user me-2"></i> User Management</a></li>
           <li><a class="dropdown-item" href="post-management.html"><i class="fas fa-blog me-2"></i> Post Management</a></li>
           <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item text-danger" href="logout.html"><i class="fas fa-sign-out-alt me-2"></i> Logout</a></li>
+          <li><a class="dropdown-item text-danger" href="logout.html" onclick="logout()"><i class="fas fa-sign-out-alt me-2"></i> Logout</a></li>
         </ul>
       </div>
     </div>
