--- a/BloggoFrontend/pages/post-management.html
+++ b/BloggoFrontend/pages/post-management.html
@@ -181,53 +181,21 @@
                 </div>
                 <div class="card-body">
                     <div class="row g-3" id="postContainer">
-
-                        <div class="col-md-4">
-                            <div class="card h-100 shadow-sm">
-                                <div class="card-body">
-                                    <h6 class="card-title">@alex</h6>
-                                    <p class="card-text text-muted">"Just finished my project! Feeling accomplished 🙌"</p>
-                                    <span class="badge bg-success">Visible</span>
-                                </div>
-                                <div class="card-footer d-flex justify-content-end">
-                                    <button class="btn btn-sm btn-warning me-2">Hide</button>
-                                    <button class="btn btn-sm btn-danger">Delete</button>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-4">
-                            <div class="card h-100 shadow-sm">
-                                <div class="card-body">
-                                    <h6 class="card-title">@susan</h6>
-                                    <p class="card-text text-muted">"Vacation time! Can't wait to travel ✈️"</p>
-                                    <span class="badge bg-secondary">Hidden</span>
-                                </div>
-                                <div class="card-footer d-flex justify-content-end">
-                                    <button class="btn btn-sm btn-success me-2">Unhide</button>
-                                    <button class="btn btn-sm btn-danger">Delete</button>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-4">
-                            <div class="card h-100 shadow-sm">
-                                <div class="card-body">
-                                    <h6 class="card-title">@john</h6>
-                                    <p class="card-text text-muted">"Working late night on my startup idea 💡"</p>
-                                    <span class="badge bg-success">Visible</span>
-                                </div>
-                                <div class="card-footer d-flex justify-content-end">
-                                    <button class="btn btn-sm btn-warning me-2">Hide</button>
-                                    <button class="btn btn-sm btn-danger">Delete</button>
-                                </div>
-                            </div>
-                        </div>
+                        <!-- Posts will be dynamically loaded here -->
                     </div>
+
+                    <!-- Pagination -->
+                    <nav aria-label="Post pagination" class="mt-3">
+                        <ul class="pagination justify-content-center" id="pagination">
+                            <!-- Pagination buttons will be injected here by JS -->
+                        </ul>
+                    </nav>
                 </div>
+
             </div>
         </main>
     </div>
 </div>
+<script src="../js/post-management.js"></script>
 </body>
 </html>
