--- a/BloggoFrontend/pages/members.html
+++ b/BloggoFrontend/pages/members.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title id="Members"></title>
+    <title id="Members">Members</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -66,18 +66,12 @@
     <div class="row mt-3">
         <!-- Main Feed -->
         <div class="col-lg-8">
-            <h2 class="mb-4">Stories</h2>
+            <h2 class="mb-4">People to Follow</h2>
 
             <!-- Tab Content -->
-            <div class="tab-content mt-3" id="notificationTabsContent">
-                <!--&lt;!&ndash; All Tab &ndash;&gt;
-                <div class="tab-pane fade show active" id="all" role="tabpanel"></div>
+            <div class="tab-content mt-3" id="MembersTabsContent">
+                <div id="all"></div>
 
-                &lt;!&ndash; Mentions Tab &ndash;&gt;
-                <div class="tab-pane fade" id="mentions" role="tabpanel"></div>
-
-                &lt;!&ndash; Likes Tab &ndash;&gt;
-                <div class="tab-pane fade" id="likes" role="tabpanel"></div>-->
             </div>
         </div>
 
@@ -117,7 +111,7 @@
                     </div>
                 </div>
 
-                <a class="btn btn-secondary btn-sm w-100 mt-2" style="background: black; color: white">Follow</a>
+                <a href="settings.html" class="btn btn-secondary btn-sm w-100 mt-2" style="background: black; color: white">Edit profile</a>
 
             </div>
 
