Add functionality to fetch user suggestions excluding logged user and profile owner

--- a/BloggoFrontend/pages/members-profile.html
+++ b/BloggoFrontend/pages/members-profile.html
@@ -98,27 +98,11 @@
 
       </div>
 
-      <!-- Following List -->
       <div class="card p-3 mb-3">
         <h6 class="mb-3">More People to Follow</h6>
-        <ul class="list-unstyled following-list mb-0">
-          <li class="d-flex align-items-center mb-2">
-            <img  class="rounded-circle me-2" alt="">
-            <span>test1</span>
-          </li>
-          <li class="d-flex align-items-center mb-2">
-            <img  class="rounded-circle me-2" alt="">
-            <span>test2</span>
-          </li>
-          <li class="d-flex align-items-center mb-2">
-            <img  class="rounded-circle me-2" alt="">
-            <span>test3</span>
-          </li>
-          <li>
-            <a href="follow.html" class="text-decoration-none">See all (12)</a>
-          </li>
-        </ul>
+        <ul id="more-people-container" class="list-unstyled following-list mb-0"></ul>
       </div>
+
     </div>
   </div>
 </div>
