--- a/BloggoFrontend/pages/members-profile.html
+++ b/BloggoFrontend/pages/members-profile.html
@@ -94,7 +94,10 @@
           Just a 21+ girl navigating life with passion and purpose! ✨
         </p>
 
-        <a  class="btn btn-secondary btn-sm w-100 mt-2" style="background: black; color: white">Follow</a>
+        <a class="btn btn-secondary btn-sm w-100 mt-2 followBtn"
+           style="background: black; color: white"
+           data-user-id="123">Follow</a>
+
 
       </div>
 
