Enhance UI with new styles, improve header and button designs, and implement smooth scrolling and animations

--- a/BloggoFrontend/pages/signing.html
+++ b/BloggoFrontend/pages/signing.html
@@ -21,8 +21,8 @@
     <a class="navbar-brand" href="#" aria-label="Bloggo Home">BLOGGO</a>
 
     <div>
-      <a href="signup.html" class="btn">Sign up</a>
-      <a href="../index.html" class="btn" id="btn-home">Home</a>
+      <a href="signup.html" class="btn"><i class="fas fa-sign-in-alt me-1"></i>Sign up</a>
+      <a href="../index.html" class="btn" id="btn-home"><i class="fas fa-home me-1"></i>Home</a>
     </div>
   </div>
 </div>
